force-app/main/default/objects/AAR_HQP__c/AAR_HQP__c.object-meta.xml
<CustomObject>
    <label>Highly Qualified Personnel</label>
    <nameField>
        <displayFormat>HQP-{0000}</displayFormat>
        <label>HQP Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Highly Qualified Personnel</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>