force-app/main/default/objects/AAR_HQP__c/fields/Employment_Type__c.field-meta.xml
<CustomField>
    <fullName>Employment_Type__c</fullName>
    <label>Employment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Full-Time</fullName><default>false</default><label
        >Full-Time</label></value>
            <value><fullName>Part-Time</fullName><default>false</default><label
        >Part-Time</label></value>
            <value><fullName>Volunteer</fullName><default>false</default><label
        >Volunteer</label></value>
            <value><fullName>Casual</fullName><default>false</default><label
        >Casual</label></value>
            <value><fullName>Contract</fullName><default>false</default><label
        >Contract</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>