force-app/main/default/objects/AAR_HQP__c/fields/Position_Title__c.field-meta.xml
<CustomField>
    <fullName>Position_Title__c</fullName>
    <label>Position / Title</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>