force-app/main/default/objects/AAR_HQP__c/fields/Supervisor_Role__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Role__c</fullName>
    <label>Supervisor Role</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Primary Supervisor</fullName><default
        >false</default><label>Primary Supervisor</label></value>
            <value><fullName>Co-Supervisor</fullName><default
        >false</default><label>Co-Supervisor</label></value>
            <value><fullName>Thesis Committee Member</fullName><default
        >false</default><label>Thesis Committee Member</label></value>
            <value><fullName>Mentor</fullName><default>false</default><label
        >Mentor</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>