force-app/main/default/objects/AAR_HQP__c/fields/Trainee_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Trainee_First_Name__c</fullName>
    <label>Trainee First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>