force-app/main/default/objects/AAR_HQP__c/fields/Trainee_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Trainee_Last_Name__c</fullName>
    <label>Trainee Last Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>